--- a/play.ipynb
+++ b/play.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logging.basicConfig(filename='logging.txt', level=logging.DEBUG)\n",
+    "logging.debug(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "from yt_dlp import YoutubeDL"
    ]
